--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "express": "^4.21.2",
     "mongoose": "^7.8.7",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
